--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -131,6 +131,9 @@ jobs:
       
       - name: List Ansible Plugins Directory
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible/plugins
+
+      - name: List Ansible Plugins Cache Directory
+        run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible/plugins/cache
       
       - name: List Ansible Template Directory
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible/template
