feat(Update): Inventory

--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -87,15 +87,19 @@ jobs:
           echo "print(os.path.join(os.path.dirname(ansible.__file__), 'config', 'base.yml'))" >> locate_ansible.py
           echo "print(os.path.join(os.path.dirname(ansible.__file__), 'config', 'ansible_builtin_runtime.yml'))" >> locate_ansible.py
           echo "print(os.path.join(os.path.dirname(ansible.__file__), 'plugins', 'cache', 'memory.py'))" >> locate_ansible.py
+          echo "print(os.path.join(os.path.dirname(ansible.__file__), 'plugins', 'inventory'))" >> locate_ansible.py
           BASE_YML=$(python locate_ansible.py | sed -n 1p)
           ANSIBLE_BUILTIN=$(python locate_ansible.py | sed -n 2p)
           CACHE_MEMORY=$(python locate_ansible.py | sed -n 3p)
+          INVENTORY_PLUGINS=$(python locate_ansible.py | sed -n 4p)
           echo "BASE_YML=$BASE_YML" >> $GITHUB_ENV
           echo "ANSIBLE_BUILTIN=$ANSIBLE_BUILTIN" >> $GITHUB_ENV
           echo "CACHE_MEMORY=$CACHE_MEMORY" >> $GITHUB_ENV
+          echo "INVENTORY_PLUGINS=$INVENTORY_PLUGINS" >> $GITHUB_ENV
           echo "Base YML Path: $BASE_YML"
           echo "Ansible Builtin Path: $ANSIBLE_BUILTIN"
           echo "Cache Memory Path: $CACHE_MEMORY"
+          echo "Inventory Plugins Path: $INVENTORY_PLUGINS"
       
       - name: List Ansible Config Directory
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible
@@ -154,6 +158,7 @@ jobs:
           BASE_YML: ${{ env.BASE_YML }}
           ANSIBLE_BUILTIN: ${{ env.ANSIBLE_BUILTIN }}
           CACHE_MEMORY: ${{ env.CACHE_MEMORY }}
+          INVENTORY_PLUGINS: ${{ env.INVENTORY_PLUGINS }}
         run: |
           pyinstaller --onefile --name linuxwt-${{ needs.versioning.outputs.version }} main.py \
           --add-data "ui:ui" \
@@ -161,7 +166,8 @@ jobs:
           --add-data "db:db" \
           --add-data "${BASE_YML}:ansible/config" \
           --add-data "${ANSIBLE_BUILTIN}:ansible/config" \
-          --add-data "${CACHE_MEMORY}:ansible/plugins/cache" \
+          --add-data "${CACHE_MEMORY}:ansible/plugins/cache/memory.py" \
+          --add-data "${INVENTORY_PLUGINS}:ansible/plugins/inventory" \
           --hidden-import "ui" \
           --hidden-import "ansible_utils" \
           --hidden-import "db" \
