--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -166,7 +166,7 @@ jobs:
           --add-data "db:db" \
           --add-data "${BASE_YML}:ansible/config" \
           --add-data "${ANSIBLE_BUILTIN}:ansible/config" \
-          --add-data "${CACHE_MEMORY}:ansible/plugins/cache/memory.py" \
+          --add-data "${CACHE_MEMORY}:ansible/plugins/cache" \
           --add-data "${INVENTORY_PLUGINS}:ansible/plugins/inventory" \
           --hidden-import "ui" \
           --hidden-import "ansible_utils" \
