--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -183,6 +183,7 @@ jobs:
           --hidden-import "ansible.executor.task_queue_manager" \
           --hidden-import "ansible.module_utils.common.collections" \
           --hidden-import "ansible.utils.display" \
+          --hidden-import "ansible.utils.shlex" \
           --hidden-import "ansible.plugins.callback" \
           --hidden-import "ansible.plugins.cache.memory" \
           --hidden-import "ansible.plugins.inventory" > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
