feat(Update) versioning.yml

--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -167,31 +167,14 @@ jobs:
           --add-data "ui:ui" \
           --add-data "ansible_utils:ansible_utils" \
           --add-data "db:db" \
-          --add-data "${BASE_YML}:ansible/config" \
-          --add-data "${ANSIBLE_BUILTIN}:ansible/config" \
-          --add-data "${CACHE_MEMORY}:ansible/plugins/cache" \
-          --add-data "${INVENTORY_PLUGINS}:ansible/plugins/inventory" \
-          --add-data "${STRATEGY_PLUGINS}:ansible/plugins/strategy" \
+          --add-data "/home/runner/.local/lib/python3.9/site-packages/ansible:ansible" \
           --hidden-import "ui" \
           --hidden-import "ansible_utils" \
           --hidden-import "db" \
           --hidden-import "rich" \
           --hidden-import "sqlite3" \
           --hidden-import "customtkinter" \
-          --hidden-import "ansible" \
-          --hidden-import "ansible.inventory.manager" \
-          --hidden-import "ansible.plugins.cache.memory" \
-          --hidden-import "ansible.parsing.dataloader" \
-          --hidden-import "ansible.vars.manager" \
-          --hidden-import "ansible.playbook.play" \
-          --hidden-import "ansible.executor.task_queue_manager" \
-          --hidden-import "ansible.module_utils.common.collections" \
-          --hidden-import "ansible.utils.display" \
-          --hidden-import "ansible.utils.shlex" \
-          --hidden-import "ansible.plugins.callback" \
-          --hidden-import "ansible.plugins.cache.memory" \
-          --hidden-import "ansible.plugins.strategy"
-          --hidden-import "ansible.plugins.inventory" > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
+          --hidden-import "ansible" > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
         shell: bash
   
       - name: Print PyInstaller build summary
