feat(Update): versioning.yml

--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -89,11 +89,13 @@ jobs:
           echo "print(os.path.join(os.path.dirname(ansible.__file__), 'plugins', 'cache', 'memory.py'))" >> locate_ansible.py
           echo "print(os.path.join(os.path.dirname(ansible.__file__), 'plugins', 'inventory'))" >> locate_ansible.py
           echo "print(os.path.join(os.path.dirname(ansible.__file__), 'plugins', 'strategy'))" >> locate_ansible.py
+          echo "print(os.path.join(os.path.dirname(ansible.__file__), 'plugins', 'vars'))" >> locate_ansible.py
           BASE_YML=$(python locate_ansible.py | sed -n 1p)
           ANSIBLE_BUILTIN=$(python locate_ansible.py | sed -n 2p)
           CACHE_MEMORY=$(python locate_ansible.py | sed -n 3p)
           INVENTORY_PLUGINS=$(python locate_ansible.py | sed -n 4p)
           STRATEGY_PLUGINS=$(python locate_ansible.py | sed -n 5p)
+          VARS_PLUGINS=$(python locate_ansible.py | sed -n 6p)
           echo "BASE_YML=$BASE_YML" >> $GITHUB_ENV
           echo "ANSIBLE_BUILTIN=$ANSIBLE_BUILTIN" >> $GITHUB_ENV
           echo "CACHE_MEMORY=$CACHE_MEMORY" >> $GITHUB_ENV
@@ -104,6 +106,7 @@ jobs:
           echo "Cache Memory Path: $CACHE_MEMORY"
           echo "Inventory Plugins Path: $INVENTORY_PLUGINS"
           echo "Strategy Plugins Path: $STRATEGY_PLUGINS"
+          echo "Vars Plugins Path: $VARS_PLUGINS"
       
       - name: List Ansible Config Directory
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible
@@ -163,6 +166,7 @@ jobs:
           echo "CACHE_MEMORY: ${{ env.CACHE_MEMORY }}"
           echo "INVENTORY_PLUGINS: ${{ env.INVENTORY_PLUGINS }}"
           echo "STRATEGY_PLUGINS: ${{ env.STRATEGY_PLUGINS }}"
+          echo "VARS_PLUGINS: ${{ env.VARS_PLUGINS }}"
 
       - name: Build binary with PyInstaller
         env:
@@ -181,6 +185,7 @@ jobs:
           --add-data "${CACHE_MEMORY}:ansible/plugins/cache" \
           --add-data "${INVENTORY_PLUGINS}:ansible/plugins/inventory" \
           --add-data "${STRATEGY_PLUGINS}:ansible/plugins/strategy" \
+          --add-data "${VARS_PLUGINS}:ansible/plugins/vars" \
           --hidden-import "ui" \
           --hidden-import "ansible_utils" \
           --hidden-import "db" \
@@ -200,6 +205,7 @@ jobs:
           --hidden-import "ansible.plugins.callback" \
           --hidden-import "ansible.plugins.cache.memory" \
           --hidden-import "ansible.plugins.strategy" \
+          --hidden-import "ansible.plugins.vars" \
           --hidden-import "ansible.plugins.inventory" > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
         shell: bash
   
