--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -90,24 +90,28 @@ jobs:
           echo "print(os.path.join(os.path.dirname(ansible.__file__), 'plugins', 'inventory'))" >> locate_ansible.py
           echo "print(os.path.join(os.path.dirname(ansible.__file__), 'plugins', 'strategy'))" >> locate_ansible.py
           echo "print(os.path.join(os.path.dirname(ansible.__file__), 'plugins', 'vars'))" >> locate_ansible.py
+          echo "print(os.path.join(os.path.dirname(ansible.__file__), 'plugins', 'connection'))" >> locate_ansible.py
           BASE_YML=$(python locate_ansible.py | sed -n 1p)
           ANSIBLE_BUILTIN=$(python locate_ansible.py | sed -n 2p)
           CACHE_MEMORY=$(python locate_ansible.py | sed -n 3p)
           INVENTORY_PLUGINS=$(python locate_ansible.py | sed -n 4p)
           STRATEGY_PLUGINS=$(python locate_ansible.py | sed -n 5p)
           VARS_PLUGINS=$(python locate_ansible.py | sed -n 6p)
+          CONNECTION_PLUGINS=$(python locate_ansible.py | sed -n 7p)
           echo "BASE_YML=$BASE_YML" >> $GITHUB_ENV
           echo "ANSIBLE_BUILTIN=$ANSIBLE_BUILTIN" >> $GITHUB_ENV
           echo "CACHE_MEMORY=$CACHE_MEMORY" >> $GITHUB_ENV
           echo "INVENTORY_PLUGINS=$INVENTORY_PLUGINS" >> $GITHUB_ENV
           echo "STRATEGY_PLUGINS=$STRATEGY_PLUGINS" >> $GITHUB_ENV
           echo "VARS_PLUGINS=$VARS_PLUGINS" >> $GITHUB_ENV
+          echo "CONNECTION_PLUGINS=$CONNECTION_PLUGINS" >> $GITHUB_ENV
           echo "Base YML Path: $BASE_YML"
           echo "Ansible Builtin Path: $ANSIBLE_BUILTIN"
           echo "Cache Memory Path: $CACHE_MEMORY"
           echo "Inventory Plugins Path: $INVENTORY_PLUGINS"
           echo "Strategy Plugins Path: $STRATEGY_PLUGINS"
           echo "Vars Plugins Path: $VARS_PLUGINS"
+          echo "Connection Plugins Path: $CONNECTION_PLUGINS"
       
       - name: List Ansible Config Directory
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible
@@ -168,6 +172,7 @@ jobs:
           echo "INVENTORY_PLUGINS: ${{ env.INVENTORY_PLUGINS }}"
           echo "STRATEGY_PLUGINS: ${{ env.STRATEGY_PLUGINS }}"
           echo "VARS_PLUGINS: ${{ env.VARS_PLUGINS }}"
+          echo "CONNECTION_PLUGINS: ${{ env.CONNECTION_PLUGINS }}"
 
       - name: Build binary with PyInstaller
         env:
@@ -187,6 +192,7 @@ jobs:
           --add-data "${INVENTORY_PLUGINS}:ansible/plugins/inventory" \
           --add-data "${STRATEGY_PLUGINS}:ansible/plugins/strategy" \
           --add-data "${VARS_PLUGINS}:ansible/plugins/vars" \
+          --add-data "${CONNECTION_PLUGINS}:ansible/plugins/connection" \
           --hidden-import "ui" \
           --hidden-import "ansible_utils" \
           --hidden-import "db" \
