--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -191,7 +191,7 @@ jobs:
           --add-data "ui:ui" \
           --add-data "ansible_utils:ansible_utils" \
           --add-data "db:db" \
-          --add-data "installation_state.db;." \
+          --add-data "installation_state.db:." \
           --add-data "${BASE_YML}:ansible/config" \
           --add-data "${ANSIBLE_BUILTIN}:ansible/config" \
           --add-data "${CACHE_MEMORY}:ansible/plugins/cache" \
