--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -78,6 +78,7 @@ jobs:
           pip install --user rich
           pip install --user customtkinter
           pip install --user pyinstaller
+          pip install --user ansible-runner
 
       - name: Locate Ansible Data Files
         id: locate-ansible
