--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -117,7 +117,11 @@ jobs:
           echo "Vars Plugins Path: $VARS_PLUGINS"
           echo "Connection Plugins Path: $CONNECTION_PLUGINS"
           echo "Action Plugins Path: $ACTION_PLUGINS"
-      
+
+
+      - name: List Site Packages
+        run: ls -l /home/runner/.local/lib/python3.9/site-packages
+
       - name: List Ansible Config Directory
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible
 
