--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -122,6 +122,9 @@ jobs:
       - name: List Site Packages
         run: ls -l /home/runner/.local/lib/python3.9/site-packages
 
+      - name: List Ansible Runner
+        run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible_runner
+
       - name: List Ansible Config Directory
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible
 
