--- a/ansible_utils/roles/nginx/handlers/main.yml
+++ b/ansible_utils/roles/nginx/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 # handlers file for nginx
-  - name: Restart nginx service
+  - name: Restart NGINX
     service:
       name: nginx
       state: restarted
